# ellalang

./: Cargo.toml  README.md  test.ella
.github/workflows/: bench.yml
ella/: Cargo.toml
ella-parser/src/: ast.rs  lexer.rs  parser.rs  visitor.rs
ella-parser/src/parser/: expr.rs  stmt.rs
ella-parser/src/parser/snapshots/: ella_parser__parser__expr__tests__all-valid-escape-sequences-string.snap  ella_parser__parser__expr__tests__binary-associativity-2.snap  ella_parser__parser__expr__tests__binary-associativity.snap  ella_parser__parser__expr__tests__binary-equality.snap  ella_parser__parser__expr__tests__binary-paren.snap  ella_parser__parser__expr__tests__binary.snap  (+33 more)
ella-passes/src/: resolve.rs  type_checker.rs
ella-source/: Cargo.toml
ella-source/src/: lib.rs
ella-value/src/: chunk.rs  disassemble.rs  lib.rs  object.rs
ella-vm/: Cargo.toml
ella-vm/src/: codegen.rs  vm.rs
ella/benches/: interpret.rs
ella/src/: builtin_functions.rs  lib.rs  main.rs
ella/tests/: integration_tests.rs
owl/: Cargo.toml
owl-parser/: Cargo.toml
owl-parser/benches/: parser.rs
owl-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  visitor.rs
owl-parser/src/parser/: expr.rs  stmt.rs
owl-passes/: Cargo.toml
owl-passes/src/: lib.rs  resolve.rs  type_checker.rs
owl-source/: Cargo.toml
owl-value/: Cargo.toml
owl-value/src/: chunk.rs  disassemble.rs  lib.rs  object.rs
owl-vm/: Cargo.toml
owl-vm/src/: codegen.rs  vm.rs
owl/benches/: interpret.rs
owl/src/: builtin_functions.rs  lib.rs  main.rs
owl/tests/: integration_tests.rs
(+78 files in other folders)
