[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "owl-vm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owl-parser = {path = "../owl-parser"}
owl-passes = {path = "../owl-passes"}
owl-source = {path = "../owl-source"}
owl-value = {path = "../owl-value"}
num-traits = "0.2.14"

[dev-dependencies]
criterion = "0.3.3"
