[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "owl"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
owl-parser = {path = "../owl-parser"}
owl-passes = {path = "../owl-passes"}
owl-source = {path = "../owl-source"}
owl-value = {path = "../owl-value"}
owl-vm = {path = "../owl-vm"}
logos = "0.11.4"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
harness = false
name = "interpret"
